# gpt-cv-assessment

./: .gitignore  README.md  pyproject.toml
gpt_cv_assessment/: helper.py  main.py  processors.py
