[tool.poetry]
name = "gpt-cv-assessment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "1.14.1"
langchain = "0.1.12"
langchain-openai = "0.0.8"
pypdf2 = "^3.0.1"
python-docx = "^1.1.0"
textract = "^1.6.5"
tiktoken = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
